Misc updates for data search